# HanseiThon_5th

./: Cargo.toml  README.md
src/: controllers.rs  database.rs  main.rs
static/css/: detail.css  index.css  login.css  register.css
static/db/: db.db
templates/: detail.tera  index.tera  login.tera  register.tera  test.tera
