[package]
name = "hansei"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket-static-files = "0.1"
mysql = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "0.9"
serde_derive = "0.9"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["handlebars_templates", "tera_templates", "json"]


[global.databases]
sqlite_logs = { url = "db.sqlite" }